--- a/index.html
+++ b/index.html
@@ -1,28 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8" />
-    <title>AgriNexus World - GPT 자동화 통합 포털</title>
-</head>
-<body>
-    <h1>🌍 AgriNexus World</h1>
-    <ul>
-        <li><a href="/chatbot">🧠 GPT 상담봇</a></li>
-        <li><a href="/contract">📄 계약서 자동 생성</a></li>
-        <li><a href="/report">📊 보고서 요약 생성기</a></li>
-        <li><a href="/news">📰 글로벌 뉴스 요약</a></li>
-        <li><a href="/global-opportunity">🌐 국가별 전략 제안</a></li>
-        <li><a href="/ai-export">📦 수출입 문서 자동화</a></li>
-        <li><a href="/admin">🛠 관리자 대시보드</a></li>
-    </ul>
-
-<script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/serviceWorker.js')
-      .then(function() { console.log("✅ Service Worker 등록 완료"); });
-  }
-</script>
-</body>
-
-</html>
+<h1>AgriNexus World Platform</h1><ul><li><a href='contract.html'>📄 계약</a></li><li><a href='report.html'>📊 보고</a></li><li><a href='admin.html'>🛠 관리자</a></li></ul>
