--- a/admin.html
+++ b/admin.html
@@ -1,34 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-<head><meta charset="UTF-8"><title>Admin</title><script src="https://cdn.jsdelivr.net/npm/chart.js"></script><script src="config.js"></script></head>
-<body>
-<h2>📊 제출 통계 보기</h2>
-<input id="token" placeholder="Bearer 토큰 입력" style="width:300px"><br>
-<button onclick="load()">제출 목록 & 통계 보기</button>
-<div><canvas id="statsChart" height="150"></canvas></div>
-<ul id="list"></ul>
-<script>
-async function load() {
-  const token = document.getElementById("token").value;
-  const res1 = await fetch(CONFIG.API_BASE_URL + "/submissions", { headers: { Authorization: token } });
-  const list = await res1.json();
-  document.getElementById("list").innerHTML = list.map(x => `<li>${x.email} - <a href="${CONFIG.API_BASE_URL}${x.download_url}" target="_blank">${x.filename}</a></li>`).join("");
-
-  const res2 = await fetch(CONFIG.API_BASE_URL + "/stats", { headers: { Authorization: token } });
-  const data = await res2.json();
-  const ctx = document.getElementById('statsChart').getContext('2d');
-  new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels: Object.keys(data),
-      datasets: [
-        { label: '계약서', data: Object.values(data).map(d => d.contract), backgroundColor: 'skyblue' },
-        { label: '보고서', data: Object.values(data).map(d => d.report), backgroundColor: 'orange' }
-      ]
-    }
-  });
-}
-</script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>admin.html</title></head><body><h2>관리자 통계/보고서 대시보드</h2><br><a href='index.html'>← 메인으로</a></body></html>
