--- a/report.html
+++ b/report.html
@@ -1,23 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-<head><meta charset="UTF-8"><title>Contract</title><script src="config.js"></script></head>
-<body>
-<h2>📊 보고서 제출</h2>
-<textarea id="input" rows="6" placeholder="계약 조건을 입력하세요"></textarea><br>
-<input type="email" id="email" placeholder="이메일 입력"><br>
-<button onclick="upload()">서버 제출</button>
-<script>
-function upload() {
-  const data = new Blob([document.getElementById('input').value], {type: 'application/pdf'});
-  const formData = new FormData();
-  formData.append("file", new File([data], "report_summary.pdf"));
-  formData.append("email", document.getElementById("email").value);
-  fetch(CONFIG.API_BASE_URL + "/upload", {
-    method: "POST",
-    body: formData
-  }).then(res => res.json()).then(d => alert("📤 제출 성공")).catch(e => alert("오류:" + e.message));
-}
-</script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>report.html</title></head><body><h2>보고서 자동 생성 기능 상세 페이지</h2><br><a href='index.html'>← 메인으로</a></body></html>
