--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>contact.html</title></head><body><h2>문의하기 / 자동 이메일 발송 폼</h2><br><a href='index.html'>← 메인으로</a></body></html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>contact.html</title></head><body><h2>Contact Page</h2><br><a href='index.html'>← Main</a></body></html>
