--- a/report.html
+++ b/report.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>report.html</title></head><body><h2>보고서 자동 생성 기능 상세 페이지</h2><br><a href='index.html'>← 메인으로</a></body></html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>report.html</title></head><body><h2>Report Page</h2><br><a href='index.html'>← Main</a></body></html>
