--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>admin.html</title></head><body><h2>관리자 통계/보고서 대시보드</h2><br><a href='index.html'>← 메인으로</a></body></html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>admin.html</title></head><body><h2>Admin Page</h2><br><a href='index.html'>← Main</a></body></html>
