--- a/funding.html
+++ b/funding.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>funding.html</title></head><body><h2>글로벌 펀드 매칭 시스템 상세 설명</h2><br><a href='index.html'>← 메인으로</a></body></html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>funding.html</title></head><body><h2>Funding Page</h2><br><a href='index.html'>← Main</a></body></html>
