--- a/satellite.html
+++ b/satellite.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>satellite.html</title></head><body><h2>위성 기반 시각화 및 물류 추적 페이지</h2><br><a href='index.html'>← 메인으로</a></body></html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>satellite.html</title></head><body><h2>Satellite Page</h2><br><a href='index.html'>← Main</a></body></html>
