--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>admin.html</title></head><body><h2>Admin Page</h2><br><a href='index.html'>← Main</a></body></html>
+
+<!DOCTYPE html>
+<html><head><meta charset="UTF-8"><title>Admin Dashboard</title></head>
+<body style="font-family:Arial;padding:1rem;">
+<h2>📋 저장된 제출 내역</h2>
+<ul id="logList"></ul>
+<script>
+  const logs = JSON.parse(localStorage.getItem('formLogs') || "[]");
+  const list = document.getElementById("logList");
+  logs.forEach(log => {
+    const item = document.createElement("li");
+    item.innerText = `[${log.time}] ${log.name} (${log.email}): ${log.message}`;
+    list.appendChild(item);
+  });
+</script>
+</body>
+</html>
