--- a/index.html
+++ b/index.html
@@ -2,87 +2,119 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AgriNexus World - Full Integration</title>
-  <link rel="manifest" href="manifest.json">
+  <title>AgriNexus GPT + Firebase + Chart</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <style>
-    body { font-family: Arial; margin: 0; background: #f4f4f4; padding-bottom: 100px; }
-    header { background: #004b8d; color: white; padding: 2rem; text-align: center; }
-    section { padding: 2rem; }
-    footer { position: fixed; bottom: 0; width: 100%; background: #222; color: white; text-align: center; padding: 1rem; }
-    a { color: #007c4d; text-decoration: none; font-weight: bold; }
-    form { background: white; padding: 1rem; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    label, input, textarea { display: block; width: 100%; margin-bottom: 1rem; }
-    input, textarea { padding: 0.5rem; border: 1px solid #ccc; border-radius: 5px; }
-    button { background: #004b8d; color: white; padding: 0.5rem 1rem; border: none; border-radius: 5px; cursor: pointer; }
-    iframe { width: 100%; height: 400px; border: none; margin-top: 1rem; }
+    body { font-family: Arial; padding: 2rem; background: #f9f9f9; }
+    h1 { color: #004b8d; }
+    textarea, input { width: 100%; margin: 0.5rem 0; padding: 0.5rem; border-radius: 5px; border: 1px solid #ccc; }
+    button { background: #004b8d; color: white; padding: 0.5rem 1rem; border: none; border-radius: 5px; }
+    canvas { max-width: 100%; margin-top: 2rem; }
   </style>
-  <script>
-    const userLang = navigator.language || navigator.userLanguage;
-    window.onload = () => {
-      if (userLang.startsWith('ko')) {
-        document.getElementById('title').innerText = 'AgriNexus 월드';
-        document.getElementById('desc').innerText = 'AI 챗봇 + 이메일 제출 + 관리자 대시보드 + 다국어 지원';
-        document.getElementById('chat-title').innerText = '🧠 인공지능 상담 챗봇';
-        document.getElementById('form-title').innerText = '📩 문의 / 제안 제출';
-        document.getElementById('dashboard-title').innerText = '📊 관리자 통계 대시보드';
-        document.querySelector("label[for='name']").innerText = "이름 / Name";
-        document.querySelector("label[for='email']").innerText = "이메일 / Email";
-        document.querySelector("label[for='message']").innerText = "내용 / Message";
-        document.querySelector("button").innerText = "제출 / Submit";
-      }
-    }
-  </script>
 </head>
 <body>
-  <header>
-    <h1 id="title">AgriNexus World</h1>
-    <p id="desc">AI Chatbot + Email Submit + Admin Stats + Multilingual</p>
-  </header>
+  <h1>🧠 AI Chat + 📩 Submission + 📊 Stats</h1>
 
   <section>
-    <h2 id="chat-title">🧠 AI Chatbot Assistant</h2>
-    <iframe src="https://chat.openai.com/chat" title="GPT Chatbot"></iframe>
+    <h2>1. GPT 챗봇 (API 연동)</h2>
+    <textarea id="userInput" placeholder="질문을 입력하세요..."></textarea>
+    <button onclick="askGPT()">Send to GPT</button>
+    <pre id="gptResponse">답변이 여기에 표시됩니다...</pre>
   </section>
 
   <section>
-    <h2 id="form-title">📩 Submit Inquiry</h2>
-    <form action="save.html" method="POST" onsubmit="saveSubmission(); return false;">
-      <label for="name">Name</label>
-      <input type="text" name="name" id="name" required>
-      <label for="email">Email</label>
-      <input type="email" name="email" id="email" required>
-      <label for="message">Message</label>
-      <textarea name="message" id="message" rows="4" required></textarea>
-      <button type="submit">Submit</button>
-    </form>
+    <h2>2. 문의/제안 제출 (Firebase 저장)</h2>
+    <input type="text" id="name" placeholder="이름 / Name" required />
+    <input type="email" id="email" placeholder="이메일 / Email" required />
+    <textarea id="message" placeholder="내용 / Message" rows="4"></textarea>
+    <button onclick="submitForm()">제출</button>
   </section>
 
   <section>
-    <h2 id="dashboard-title">📊 Admin Dashboard (Mock)</h2>
-    <iframe src="admin.html"></iframe>
+    <h2>3. 제출 통계 (Chart.js 시각화)</h2>
+    <canvas id="statsChart"></canvas>
   </section>
-
-  <footer>
-    <a href="index.html">🏠 Home</a>
-  </footer>
 
   <script>
-    function saveSubmission() {
-      const data = {
-        name: document.getElementById('name').value,
-        email: document.getElementById('email').value,
-        message: document.getElementById('message').value,
-        time: new Date().toISOString()
-      };
-      let logs = localStorage.getItem('formLogs');
-      logs = logs ? JSON.parse(logs) : [];
-      logs.push(data);
-      localStorage.setItem('formLogs', JSON.stringify(logs));
-      alert("📬 Submission saved (locally for demo)!");
-      document.querySelector("form").reset();
+    // GPT API 연동
+    async function askGPT() {
+      const prompt = document.getElementById("userInput").value;
+      const responseBox = document.getElementById("gptResponse");
+      responseBox.innerText = "답변 생성 중...";
+      try {
+        const res = await fetch("https://api.openai.com/v1/chat/completions", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization": "Bearer YOUR_OPENAI_API_KEY"
+          },
+          body: JSON.stringify({
+            model: "gpt-3.5-turbo",
+            messages: [{ role: "user", content: prompt }]
+          })
+        });
+        const data = await res.json();
+        responseBox.innerText = data.choices[0].message.content;
+      } catch (err) {
+        responseBox.innerText = "❌ 오류 발생: " + err.message;
+      }
     }
+
+    // Firebase 초기화
+    const firebaseConfig = {
+      apiKey: "YOUR_FIREBASE_API_KEY",
+      authDomain: "your-project.firebaseapp.com",
+      databaseURL: "https://your-project-default-rtdb.firebaseio.com",
+      projectId: "your-project",
+      storageBucket: "your-project.appspot.com",
+      messagingSenderId: "000000000000",
+      appId: "1:000000000000:web:xxxxxxxxxxxxxx"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
+
+    // 데이터 저장
+    function submitForm() {
+      const data = {
+        name: document.getElementById("name").value,
+        email: document.getElementById("email").value,
+        message: document.getElementById("message").value,
+        timestamp: Date.now()
+      };
+      db.ref("submissions").push(data);
+      alert("📬 제출 완료!");
+    }
+
+    // Chart.js 통계
+    db.ref("submissions").on("value", snapshot => {
+      const submissions = snapshot.val() || {};
+      const labels = [];
+      const counts = [];
+      const dateMap = {};
+      for (const id in submissions) {
+        const date = new Date(submissions[id].timestamp).toLocaleDateString();
+        dateMap[date] = (dateMap[date] || 0) + 1;
+      }
+      for (const date in dateMap) {
+        labels.push(date);
+        counts.push(dateMap[date]);
+      }
+      new Chart(document.getElementById("statsChart"), {
+        type: "bar",
+        data: {
+          labels: labels,
+          datasets: [{
+            label: '제출 수',
+            data: counts,
+            backgroundColor: '#007c4d'
+          }]
+        }
+      });
+    });
   </script>
 </body>
 </html>
