--- a/contract.html
+++ b/contract.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>contract.html</title></head><body><h2>Contract Page</h2><br><a href='index.html'>← Main</a></body></html>
+<!DOCTYPE html><html><head><meta charset='utf-8'><title>contract.html</title></head><body><h2>📄 계약서 자동화 시스템</h2><br><a href='index.html'>← 메인으로</a></body></html>
