--- a/admin.html
+++ b/admin.html
@@ -1,17 +1,1 @@
-
-<!DOCTYPE html>
-<html><head><meta charset="UTF-8"><title>Admin Dashboard</title></head>
-<body style="font-family:Arial;padding:1rem;">
-<h2>📋 저장된 제출 내역</h2>
-<ul id="logList"></ul>
-<script>
-  const logs = JSON.parse(localStorage.getItem('formLogs') || "[]");
-  const list = document.getElementById("logList");
-  logs.forEach(log => {
-    const item = document.createElement("li");
-    item.innerText = `[${log.time}] ${log.name} (${log.email}): ${log.message}`;
-    list.appendChild(item);
-  });
-</script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset='utf-8'><title>admin.html</title></head><body><h2>📈 관리자 통계 대시보드</h2><br><a href='index.html'>← 메인으로</a></body></html>
